🦄 refactor: UI 改版

--- a/public/config.html
+++ b/public/config.html
@@ -22,7 +22,7 @@
         .config {
             border-radius: 8px;
             color: #eee;
-            border: 4px solid #2e4c65;
+            border: 4px solid #266294;
             background-color: #201f29;
             height: 100vh;
             width: 100vw;
@@ -54,7 +54,7 @@
         }
 
         .header svg:hover {
-            fill: #ff6b6b;
+            fill: #3da7fe;
         }
 
         .config-area {
@@ -70,7 +70,7 @@
             width: 2px;
             border-radius: 2px;
             height: 100%;
-            background-color: #2e4c65;
+            background-color: #266294;
             left: 76px;
         }
 
