--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <script>
+    const theme = window.store.appConfig.get('theme')
+    document.documentElement.classList.add(theme)
+  </script>
   <style>
     body.loading::before {
       content: '';
@@ -13,16 +17,21 @@
       height: 100vh;
       top: 0;
       left: 0;
-      background-color: #201f29;
       z-index: 999;
-      background-image: url(./img/loading.gif);
+      background-color: #f5f5f5;
+      background-image: url(./img/loading-light.gif);
       background-repeat: no-repeat;
       background-position: 50% 50%;
     }
+
+    :root.dark body.loading::before {
+      background-color: #201f29;
+      background-image: url(./img/loading.gif);
+    }
   </style>
 </head>
-
 <body class="loading">
+
   <div id="app"></div>
 </body>
 
